--- a/_Notes/todo
+++ b/_Notes/todo
@@ -7,3 +7,7 @@
 - [] refactor damageOnImpact so that owners are detecting other collisions instead of sending damage on impact.
 - [] damageOnImpact can search for InflictDamage script on colliding object to check for extra damage other than impulse force damage
 - [] projectiles can use InflictDamage script.. this can also be where different damage types are defined.
+
+==
+
+- Projectiles: fix colliding with ship; don't activate on pool.GET(), instead, preset position and velocity before activating
