--- a/_Notes/todo
+++ b/_Notes/todo
@@ -66,3 +66,6 @@
 - [] Set asteroid explosion particle to asteroid mesh
 
 - [] change power UI to a meter
+
+- [] Switch project renderer to URP; (to allow cinematic explosions package)
+  - already installed URP; Just need to run the Render Pipeline Converter; **May be better off to start a new URP project and just copy in the scripts, reimport the dl'd assets, and remake the materials.
